[package]
name = "prosemirror"
version = "0.1.0"
authors = ["Xiphoseer"]
edition = "2018"

[workspace]
members = [".", "crates/*", "xtask"]

[features]
default = ["cmark"]
cmark = ["pulldown-cmark", "pulldown-cmark-to-cmark"]


[dependencies]
derivative = "2.2.0"
thiserror = "1.0"
displaydoc = "0.2"
derive-new = "0.6"
pulldown-cmark = { version = "0.10", optional = true }
pulldown-cmark-to-cmark = { version = "11.2", optional = true }

[dependencies.serde]
version = "1.0.97"
features = ["derive"]

[dev-dependencies]
serde_json = "1.0.53"
test-runner = { path = "crates/test-runner" }
