[package]
name = "test-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diff_utils = { git = "https://github.com/frondeus/diff-assert.git", features = [
    "display",
    "patch",
] }

glob = "0.3.0"
anyhow = "1.0.28"
regex = "1.3.6"
chrono = "0.4.11"
pulse = "0.5.3"
rayon = "1.8.1"
